--- a/r_p_s.html
+++ b/r_p_s.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+<link>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Rock Paper Scissor</title>
+    <link rel="stylesheet" href="r_p_s.css" type="text/css" media="screen"/>
+
 </head>
+
+<header> Whanna play a Game </header>
+
 <body>
-$END$
+<div class="grid-container">
+<img onclick="game()" id="rock" src="image/noun_Fist_small.png"/>
+<img onclick= "game()" id="paper" src="image/noun_Hand_477922.png">
+<img onclick="game()"  id="scissor" src="image/noun_Scissors_477919.png">
+</div>
+<button onclick="alert('focus boy')">Clickadu</button>
+<div id="output-player"> </div>
+<div id=" output-computer"> </div>
+<script src="Logic.js"> </script>
 </body>
+
+
+
+
+
 </html>
