--- a/r_p_s.html
+++ b/r_p_s.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <link>
 <head>
     <meta charset="UTF-8">
@@ -11,10 +11,11 @@
 <header> Whanna play a Game </header>
 
 <body>
-<div class="grid-container">
-<img onclick="game()" id="rock" src="image/noun_Fist_small.png"/>
-<img onclick= "game()" id="paper" src="image/noun_Hand_477922.png">
-<img onclick="game()"  id="scissor" src="image/noun_Scissors_477919.png">
+
+  <div>
+ <button  class="rocky" > Rock </button>
+ <button  class="paper" > Paper </button>
+ <button  class="scissor" > Scissor </button>
 </div>
 <button onclick="alert('focus boy')">Clickadu</button>
 <div id="output-player"> </div>
