--- a/Test.html
+++ b/Test.html
@@ -14,12 +14,12 @@
 <div class="Score-Board">
     <div id="user-label" class= 'badge'> User</div> 
     <div id= "computer-label" class= 'badge'>Comp </div>
-    <span id = 'userscore'>0</span> : <span id = 'computersore'>0</span> 
+    <span id = 'user-score'>0</span> : <span id = 'computer-score'>0</span> 
 
 </div>
 
 
-<div class="result"> <p> Paper cover rock, you win!</p> </div>
+<div class="result"> <p> </p> </div>
 
 <div class= choices> 
 
