refresh and finalScoraBoard

--- a/Test.html
+++ b/Test.html
@@ -19,7 +19,7 @@
 </div>
 
 
-<div class="result"> <p> </p> </div>
+<div class="result"> <p> European Rock Scissor Paper Championship</p> </div>
 
 <div class= choices> 
 
@@ -28,8 +28,14 @@
 <div class= 'choice'id=p> <img src="image/paper.png" alt=""></div>
 </div>
 </div>
-
 <p id= 'action-message'> lets make your move </p>
+<button id = 'gambler'> Double Trouble  </button>
+<div class = 'final-score'> 
+    <span id = 'finalUserResult'> 0 </span> : <span id= 'finalComputerResult'> 0 </span>
+  <div id = 'finalUser-score' class= 'badge'> User </div>
+  <div id = 'finalComputer-score' class = 'badge'> comp</div> 
+</div>
+<button id = 'play-again' > Lets play again </button>
 
 <script src="Test.js"></script>
 </body>
